--- a/.github/workflows/docker-stack-deploy.yml
+++ b/.github/workflows/docker-stack-deploy.yml
@@ -1,21 +1,14 @@
-name: Python application
-
-
-
+name: Publish Docker
 on: [push]
-
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Docker Swarm Deploy
-        uses: sagebind/docker-swarm-deploy-action@1.0.0
-        env: 
-          DOCKER_REMOTE_HOST: "ssh://user@myswarm.com"
-          DOCKER_SSH_PRIVATE_KEY: "{secret.DOCKER_SSH_PRIVATE_KEY}"
-          DOCKER_SSH_PUBLIC_KEY: "{secret.DOCKER_SSH_PUBLIC_KEY}"
-        with:
-          args: "stack deploy --compose-file stack.yaml coolapp"
-
-
-        
+    - uses: actions/checkout@master
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+          name: karimStekelenburg/aries-cloudagent-webhook-receiver/latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.pkg.github.com
