--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,13 +43,13 @@ services:
                 "--auto-accept-requests"
                 ]
   faber-webhook-receiver:
-    from: docker.pkg.github.com/karimstekelenburg/aries-cloudagent-webhook-receiver/latest:master
+    from: docker.pkg.github.com/karimstekelenburg/aries-cloudagent-webhook-receiver/:latest
     ports: 
       - 7080:8080
     expose: 
       - 8080
   alice-webhook-receiver:
-    from: docker.pkg.github.com/karimstekelenburg/aries-cloudagent-webhook-receiver/latest:master
+    from: docker.pkg.github.com/karimstekelenburg/aries-cloudagent-webhook-receiver/:latest
     build:
       context: .
       dockerfile: Dockerfile
