--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,16 +43,13 @@ services:
                 "--auto-accept-requests"
                 ]
   faber-webhook-receiver:
-    from: docker.pkg.github.com/karimstekelenburg/aries-cloudagent-webhook-receiver/aca-wr:latest
+    build: .
     ports: 
       - 7080:8080
     expose: 
       - 8080
   alice-webhook-receiver:
-    from: docker.pkg.github.com/karimstekelenburg/aries-cloudagent-webhook-receiver/aca-wr:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports: 
       - 8080:8080
     expose: 
