--- a/.github/workflows/docker-stack-deploy.yml
+++ b/.github/workflows/docker-stack-deploy.yml
@@ -1,14 +1,27 @@
-name: Publish Docker
-on: [push]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-          name: karimstekelenburg/aries-cloudagent-webhook-receiver/aca-wr
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: docker.pkg.github.com
+# name: Publish Docker
+# on: [push]
+# jobs:
+#   publish-package:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@master
+#     - name: Publish to Registry
+#       uses: elgohr/Publish-Docker-Github-Action@master
+#       with:
+#           name: karimstekelenburg/aries-cloudagent-webhook-receiver/aca-wr
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+#           registry: docker.pkg.github.com
+#   deploy:
+#     runs-on: ubuntu-latest
+#     env:
+#       DOCKER_REMOTE_HOST: "ssh://user@myswarm.com"
+#       DOCKER_SSH_PRIVATE_KEY: ""
+#       DOCKER_SSH_PUBLIC_KEY: ""
+
+#     steps:
+#       - uses: "sagebind/docker-swarm-deploy-action@master"
+
+
+#     secrets = ["DOCKER_SSH_PRIVATE_KEY", "DOCKER_SSH_PUBLIC_KEY"]
+#     args = "stack deploy --compose-file stack.yaml coolapp"
