--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
-aca-message-intercept-env
-
+webhook-receiver-env
 # Created by https://www.gitignore.io/api/python,virtualenv,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,virtualenv,visualstudiocode
 
